tests/models/struct/u64/fail/default.rs
use dade::model;
#[model]
struct TestModel {
    #[field(default = 2.0)]
    value: u64,
}
fn main() {}
